--- a/ch.5 final 1.html
+++ b/ch.5 final 1.html
@@ -9,7 +9,38 @@
       body {
         font-family: Arial, Helvetica, sans-serif;
       }
+      ul {
+        list-style: none;
+      }
+      .ipt {
+        margin-left: 30px;
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <fieldset>
+        <ul>
+          <li>
+            <label for="r-name">이 름 </label>
+            <input type="text" id="r-name" class="ipt" />
+          </li>
+          <br />
+          <li>
+            <label for="r-phone">전 화 </label>
+            <input type="tel" id="r-phone" class="ipt" />
+          </li>
+          <br />
+          <li>
+            <label for="r-email">이메일</label>
+            <input type="email" id="r-email" class="ipt" />
+          </li>
+          <br />
+          <li>
+            <input type="button" value="예약하기" />
+          </li>
+        </ul>
+      </fieldset>
+    </form>
+  </body>
 </html>
