--- a/ch.4 final 1.html
+++ b/ch.4 final 1.html
@@ -7,7 +7,7 @@
     <title>4장 마무리문제 1번</title>
     <style>
       body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif; /*폰트 설정*/
       }
     </style>
   </head>
