--- a/ch.4 final 2.html
+++ b/ch.4 final 2.html
@@ -7,10 +7,10 @@
     <title>4장 마무리문제 2번</title>
     <style>
       body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif; /*글꼴 변경*/
       }
       table {
-        border-collapse: double;
+        border-collapse: double; /*표 테두리 두 줄로*/
       }
     </style>
   </head>
@@ -19,6 +19,7 @@
     <table border="1">
       <tr>
         <th rowspan="3" width="100" height="120">개인정보</th>
+        <!-- rowspan은 세로 칸 합치기 -->
         <th>이름</th>
         <td width="150"></td>
       </tr>
